--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -96,7 +96,7 @@
                         </table>
                     </div>
                     <div class="panel-footer">
-                        <small class="text-muted bg-info"><b class="text-info">*</b> Precios excentos de IVA</small>
+                        <small class="text-muted bg-info"><b class="text-info">*</b> Precios exentos de IVA</small>
                     </div>
                 </div>
                 {% include 'templates/listpagination.twig' %}
