--- a/app/Views/products/newproduct.twig
+++ b/app/Views/products/newproduct.twig
@@ -91,7 +91,7 @@
                                     </div>
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox" name="excentoIvaProducto" value="1" {% if input.excentoIvaProducto and productSaved is same as(false) %}checked{% endif %}> Excento IVA?
+                                            <input type="checkbox" name="excentoIvaProducto" value="1" {% if input.excentoIvaProducto and productSaved is same as(false) %}checked{% endif %}> Exento IVA?
                                         </label>
                                     </div>
                                 </div>
