Cambia los inputs con símbolo de dolar para utilizar el glyphicon

--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -30,7 +30,9 @@
             <div class="form-group">
                 <label for="valorPrecioUnitario">Costo Unitario</label>
                 <div class="input-group">
-                    <span class="input-group-addon">$</span>
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-usd"></span>
+                    </span>
                     <input type="number" name="valorPrecioUnitario" value="0" class="form-control" id="valorPrecioUnitario" min="0" step="any">
                 </div>
             </div>
