--- a/app/Views/products/newproduct.twig
+++ b/app/Views/products/newproduct.twig
@@ -47,7 +47,9 @@
                                     <div class="form-group">
                                         <label for="utilidadProducto">Utilidad Inicial del Producto</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">$</span>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-usd"></span>
+                                            </span>
                                             <input type="number" name="utilidadProducto" value="{% if productSaved is same as(false) %}{{ input.utilidadProducto ?? 0 }}{% else %}0{% endif %}" class="form-control" id="utilidadProducto" min="0" step="any">
                                         </div>
                                     </div>
