--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -95,14 +95,18 @@
                                     <div class="form-group">
                                         <label for="valorCostoActualTotal">Costo Actual del Producto</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">$</span>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-usd"></span>
+                                            </span>
                                             <input type="number" value="{{ input.valorCostoActualTotal }}" class="form-control" id="valorCostoActualTotal" step="any" readonly>
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="utilidadProducto">Utilidad del Producto</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">$</span>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-usd"></span>
+                                            </span>
                                             <input type="number" name="utilidadProducto" value="{{ input.utilidadProducto ?? 0 }}" class="form-control" id="utilidadProducto" min="0" step="any">
                                         </div>
                                     </div>
@@ -111,14 +115,18 @@
                                     <div class="form-group">
                                         <label for="precioVentaProducto">Precio de Venta</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">$</span>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-usd"></span>
+                                            </span>
                                             <input type="number" value="{{ (input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0)|number_format(4) }}" class="form-control" id="precioVentaProducto" step="any">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="precioVentaIVAProducto">Precio de Venta + IVA</label>
                                         <div class="input-group">
-                                            <span class="input-group-addon">$</span>
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-usd"></span>
+                                            </span>
                                             {% if input.excentoIvaProducto %}
                                                 <input disabled type="text" value="Producto exento de IVA" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
                                             {% else %}
