--- a/public/css/utility.css
+++ b/public/css/utility.css
@@ -22,3 +22,11 @@
     text-align: center !important;
     vertical-align: middle !important;
 }
+
+.cursor-disabled {
+    cursor: not-allowed;
+}
+
+.text-faint {
+    color: #CDCDCD;
+}
