Quita efecto fade de modal de eliminar descuentos

--- a/app/Views/products/modificardescuento.twig
+++ b/app/Views/products/modificardescuento.twig
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="modal-eliminar-recurso" tabindex="-1" role="dialog">
+        <div class="modal modal-eliminar-recurso" id="modal-eliminar-recurso" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="modal-body">
                         <p>Es seguro eliminar el descuento sin efectos secundarios.</p>
-                        <p>Para continuar, elija una de las siguientes opciones:</p>
+                        <p>Si está seguro que desea continuar, elija la siguiente opción:</p>
                         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab">
