--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -26,7 +26,7 @@
                     <div class="panel panel-primary">
                         <div class="panel-heading clearfix">
                             <h4 class="panel-title pull-left">Factura <span class="readonly-hidden">Nueva</span></h4>
-                            <button class="btn btn-xs btn-danger pull-right hidden readonly-show" data-toggle="modal" data-target="#modal-eliminar-recurso">
+                            <button id="btnMostrarModalEliminar" class="btn btn-xs btn-danger pull-right hidden readonly-show" data-toggle="modal" data-target="#modal-eliminar-recurso">
                                 <span class="glyphicon glyphicon-trash"></span>
                                 Eliminar
                             </button>
