Agrega breadcrumbs a todas las vistas

--- a/app/Views/brands/brands.twig
+++ b/app/Views/brands/brands.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Marcas{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Marcas') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
