--- a/app/Views/ingresos/ingresos.twig
+++ b/app/Views/ingresos/ingresos.twig
@@ -2,6 +2,10 @@
 
 {% block title  %}Detalles de Ingreso{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Entrada de Productos') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
