--- a/app/Views/invoices/facturas.twig
+++ b/app/Views/invoices/facturas.twig
@@ -2,6 +2,10 @@
 
 {% block title  %}Facturas{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Facturas') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
