--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -2,6 +2,10 @@
 
 {% block title  %}Productos{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Productos') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
