--- a/app/Views/tirajes/listatirajes.twig
+++ b/app/Views/tirajes/listatirajes.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Tirajes de Factura{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Tirajes') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
