--- a/app/Views/categories/categories.twig
+++ b/app/Views/categories/categories.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Categorías{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Categorías') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
