--- a/app/Views/categories/modifycategory.twig
+++ b/app/Views/categories/modifycategory.twig
@@ -2,6 +2,11 @@
 
 {% block title  %}Modificar Categoría{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('categories'), 'Categorías') }}
+    {{ bread.crumb_active('Editar Categoría') }}
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
     <div class="row">
