--- a/app/Views/clients/clientepersona.twig
+++ b/app/Views/clients/clientepersona.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Clientes{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Clientes') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
