--- a/app/Views/empresas/empresas.twig
+++ b/app/Views/empresas/empresas.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Contactos Empresas{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Empresas') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
