--- a/app/Views/products/modificardescuento.twig
+++ b/app/Views/products/modificardescuento.twig
@@ -2,6 +2,12 @@
 
 {% block title  %}Modificar Descuento{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('products'), 'Productos') }}
+    {{ bread.crumb(path_for('products/update', {id: productoID}), 'Editar Producto') }}
+    {{ bread.crumb_active('Editar Descuento') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
