--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -2,6 +2,11 @@
 
 {% block title  %}Modificar Producto{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('products'), 'Productos') }}
+    {{ bread.crumb_active('Editar Producto') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
