--- a/app/Views/providers/providers.twig
+++ b/app/Views/providers/providers.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Proveedores{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('empresas'), 'Empresas') }}
+    {{ bread.crumb_active('Ver Solo Proveedores') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
