--- a/app/Views/unitsofmeasurement/measurements.twig
+++ b/app/Views/unitsofmeasurement/measurements.twig
@@ -2,6 +2,10 @@
 
 {% block title  %}Medidas{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Medidas') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
