--- a/app/Views/unitsofmeasurement/modifyunit.twig
+++ b/app/Views/unitsofmeasurement/modifyunit.twig
@@ -2,6 +2,11 @@
 
 {% block title  %}Modificar Medida{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('measurements'), 'Medidas') }}
+    {{ bread.crumb_active('Editar Medida') }}
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
     <div class="row">
