--- a/app/Views/userconfig/userconfig.twig
+++ b/app/Views/userconfig/userconfig.twig
@@ -2,6 +2,10 @@
 
 {% block title  %}Ajustes{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Configuración del Sistema') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         {# ALERTAS #}
