--- a/app/Views/warehouses/newwarehouse.twig
+++ b/app/Views/warehouses/newwarehouse.twig
@@ -2,6 +2,11 @@
 
 {% block title  %}Nuevo Almacen{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb(path_for('warehouses'), 'Almacenes') }}
+    {{ bread.crumb_active('Nuevo Almacén') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
