--- a/app/Views/warehouses/warehouses.twig
+++ b/app/Views/warehouses/warehouses.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Almacenes{% endblock %}
 
+{% block breadcrumb %}
+    {{ bread.crumb_active('Almacenes') }}
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
