--- a/app/Views/clients/clienteempresa.twig
+++ b/app/Views/clients/clienteempresa.twig
@@ -55,7 +55,7 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-hover">
                             {% if not clients %}
                                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endif %}
@@ -70,7 +70,7 @@
                             </thead>
                             <tbody>
                             {% for client in clients %}
-                                <tr>
+                                <tr class="anchorize" data-href="{{ path_for('empresa', {id: client.EmpresaID}) }}">
                                     <td>{{ client.NombreComercial }}</td>
                                     <td>{{ client.Registro }}</td>
                                     <td>{{ client.NIT }}</td>
