--- a/app/Views/providers/providers.twig
+++ b/app/Views/providers/providers.twig
@@ -55,7 +55,7 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-hover">
                             {% if not providers %}
                                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endif %}
@@ -70,7 +70,7 @@
                             </thead>
                             <tbody>
                             {% for provider in providers %}
-                                <tr>
+                                <tr class="anchorize" data-href="{{ path_for('empresa', {id: provider.EmpresaID}) }}">
                                     <td>{{ provider.NombreComercial }}</td>
                                     <td>{{ provider.Registro }}</td>
                                     <td>{{ provider.NIT }}</td>
