--- a/app/Views/products/existenciaproducto.twig
+++ b/app/Views/products/existenciaproducto.twig
@@ -3,7 +3,7 @@
         <h2 class="panel-title">Existencias del Produto En Almacén</h2>
     </div>
     <div class="table-responsive">
-        <table class="table table-stripped">
+        <table class="table table-striped">
             {% if not existencia %}
                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
             {% endif %}
