--- a/app/Views/empresas/empresas.twig
+++ b/app/Views/empresas/empresas.twig
@@ -54,7 +54,7 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-hover">
                             {% if not empresas %}
                                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endif %}
