Renombra el script para nuevos productos

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -180,7 +180,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/new-product-set-cat-code.js" defer></script>
+    <script src="/js/newproduct.js" defer></script>
     <script src="/js/sync-precio-venta.js" defer></script>
     <script src="/js/limitar-input-numerico.js" defer></script>
 {% endblock %}
