--- a/app/Views/products/newproduct.twig
+++ b/app/Views/products/newproduct.twig
@@ -110,5 +110,5 @@
             </div>
         </div>
     </div>
-    <script src="/js/new-product-set-cat-code.js" defer></script>
+    <script src="/js/newproduct.js" defer></script>
 {% endblock %}
