--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -18,7 +18,13 @@
                 <div class="alert alert-danger"><span class="glyphicon glyphicon-remove-sign"></span> No se pudo modificar el producto.</div>
                 {% endif %}
                 <div class="panel panel-primary">
-                    <div class="panel-heading">Modifica un producto</div>
+                    <div class="panel-heading clearfix">
+                        <h2 class="panel-title pull-left">Modifica un producto</h2>
+                        <button type="button" class="btn btn-xs btn-danger pull-right" data-toggle="modal" data-target="#modal-eliminar-recurso">
+                            <span class="glyphicon glyphicon-trash"></span>
+                            Eliminar
+                        </button>
+                    </div>
                     <div class="panel-body">
                         <form action="{{ path_for('products/update', {id: productID}) }}" method="post">
                             <div class="row">
@@ -180,6 +186,10 @@
             </div>
         </div>
     </div>
+
+    {# MODAL ELIMINAR PRODUCTO #}
+    {% include 'products/eliminarproducto.twig' %}
+
     <script src="/js/newproduct.js" defer></script>
     <script src="/js/sync-precio-venta.js" defer></script>
     <script src="/js/limitar-input-numerico.js" defer></script>
