Agrega campo en modelo de producto para ver si es activo o inactivo

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -98,6 +98,11 @@
                                             {% endfor %}
                                         </select>
                                     </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="productoActivo" value="1" {% if input.productoActivo  %}checked{% endif %}> Producto Activo
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                             <hr>
