Arregla typo accion a acción

--- a/app/Views/products/eliminarproducto.twig
+++ b/app/Views/products/eliminarproducto.twig
@@ -24,7 +24,7 @@
                                     se perderá el registro de todas las veces que se realizó una compra de este producto.</p>
                                 <p>Las facturas seguirán mostrando el precio y la cantidad vendida del producto, pero
                                     quedarán en blanco los datos específicos de este producto.</p>
-                                <p>Esta accion es irreversible, si está seguro que desea continuar, presione el siguiente botón:</p>
+                                <p>Esta acción es irreversible, si está seguro que desea continuar, presione el siguiente botón:</p>
                                 <button class="btn btn-block btn-danger submit-form-with-method"
                                         data-triggerevent="eliminar-recurso-perma"
                                         data-action="{{ path_for('products/update', {id: productID}) }}"
