--- a/app/Views/brands/modifybrand.twig
+++ b/app/Views/brands/modifybrand.twig
@@ -39,4 +39,7 @@
         </div>
     </div>
 </div>
+{% include 'brands/eliminarmarca.twig' %}
+
+<script src="/js/delete-marca.js" defer></script>
 {% endblock %}
