Cambia modal eliminar marca para mostrar marca a reemplazar la eliminada

--- a/app/Views/brands/eliminarmarca.twig
+++ b/app/Views/brands/eliminarmarca.twig
@@ -69,10 +69,23 @@
                             <div class="panel-body">
                                 <p>Advertencia: Si usted elige esta opción, la marca será eliminada permanentemente.</p>
                                 <p>Todos los productos asociados a esta marca serán movidos a otra distinta.</p>
-                                <p>Esta acción es irreversible, si está seguro que desea continuar, presione el siguiente botó
+                                <p>Esta acción es irreversible, si está seguro que desea continuar, presione el siguiente botón
                                     para seleccionar la marca hacia donde se hará el traslado:</p>
-                                <button class="btn btn-block btn-danger trigger-event"
-                                        data-event="eliminar-marca-mover-productos"
+                                <form action="#" id="formSelectReplacementBrand">
+                                    <div class="form-group">
+                                        <label for="selectMarcaSeleccionada">Seleccionar Marca</label>
+                                        <select id="selectMarcaSeleccionada" name="marcaSeleccionadaID" class="form-control">
+                                            {% for marca in brandList if marca.MarcaID != idMarca %}
+                                                <option value="{{ marca.MarcaID }}">{{ marca.Nombre }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </form>
+                                <button class="btn btn-block btn-danger submit-form-with-method"
+                                        data-triggerevent="eliminar-recurso-perma"
+                                        data-action="{{ path_for('brands/update', {id: idMarca}) }}"
+                                        data-method="delete"
+                                        data-targetform="#formSelectReplacementBrand"
                                         data-dismiss="modal">
                                     <span class="glyphicon glyphicon-trash"></span>
                                     Eliminar Marca y Mover Productos
@@ -88,28 +101,3 @@
         </div>
     </div>
 </div>
-
-<div class="modal modal-elegir-marca" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Elije La Marca a Trasladar</h4>
-            </div>
-            <div class="modal-body">
-                <select id="selectMarcaSeleccionada"></select>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-{% verbatim %}
-<script type="text/template" id="template-marca-opts">
-    {{#almacenes}}
-        <option value="{{MarcaID}}">{{Nombre}}</option>
-    {{/almacenes}}
-</script>
-{% endverbatim %}
