--- a/app/Views/brands/eliminarmarca.twig
+++ b/app/Views/brands/eliminarmarca.twig
@@ -9,7 +9,7 @@
                 <p class="text-danger">Advertencia: No se puede eliminar esta marca de forma segura.</p>
                 <p>Para saber más sobre posibles efectos secundarios, elija una de las siguientes opciones:</p>
                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default {% if input.nombreMarca == 'MARCA ELIMINADA' %}hidden{% endif %}">
                         <div class="panel-heading" role="tab">
                             <h4 class="panel-title">
                                 <a href="#collapse-eliminar-perma" role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="collapse-eliminar-perma">
